Db connected and security applied using db credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.application.name=SpringSecurityTest
 
 spring.security.user.name=aditya
 spring.security.user.password=aditya
+
+spring.datasource.url=jdbc:mysql://localhost:3306/microone
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=5001
